<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Обложка трека -->
    <ImageView
        android:id="@+id/trackCover"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/track_cover" />

    <!-- Название трека -->
    <TextView
        android:id="@+id/trackTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/trackCover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="Track Title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <!-- Имя исполнителя -->
    <TextView
        android:id="@+id/trackArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Artist Name"
        android:textColor="#C7870F0F"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trackTitle" />

    <!-- Полоса прогресса -->
    <SeekBar
        android:id="@+id/trackSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/trackArtist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Кнопки управления -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/trackSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- Кнопка предыдущего трека -->
        <ImageButton
            android:id="@+id/previousButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_previous"
            android:background="@null"
            android:contentDescription="@string/previous_track" />

        <!-- Кнопка воспроизведения/паузы -->
        <ImageButton
            android:id="@+id/playPauseButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_play"
            android:background="@null"
            android:contentDescription="@string/play_pause" />

        <!-- Кнопка следующего трека -->
        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_next"
            android:background="@null"
            android:contentDescription="@string/next_track" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addPlaylistButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Поле ввода нового плейлиста -->
    <EditText
        android:id="@+id/newPlaylistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_playlist_name"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addPlaylistButton" />

    <!-- Кнопка добавления нового плейлиста -->
    <Button
        android:id="@+id/addPlaylistButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
